fix spacing on cards

--- a/frontend/src/shared/components/baseCard/baseCard.css
+++ b/frontend/src/shared/components/baseCard/baseCard.css
@@ -1,5 +1,5 @@
 .base-card {
-    --card-text-width: 330px;
+    --card-text-width: 420px;
 
     display: block;
     position: relative;
@@ -24,3 +24,10 @@
 
     transition: all 0.4s ease;
 }
+
+@media (max-width: 1000px) {
+    .base-card {
+        --card-text-width: 330px;
+    }
+}
+
